07-ingress-rules/webapp-ingress-annotations.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-<YOUR_NAME>.unipig.de
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    external-dns.alpha.kubernetes.io/ttl: "60" 
spec:
  tls:
  - hosts:
    - webapp-<YOUR_NAME>.unipig.de 
    secretName: webapp-tls
  rules:
  - host: webapp-<YOUR_NAME>.unipig.de 
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-svc
          servicePort: http
